Bitmaps/Not Bitmaps lfa + dark mode fix (#1422)
* Add (prettier) Bitmaps LFA Support

* Add LFA Support for Not Bitmaps and fix Not Bitmaps dark mode

* Spacing consistency

---------

--- a/More/Logfile Analyzer Styling Data.css
+++ b/More/Logfile Analyzer Styling Data.css
@@ -320,6 +320,12 @@
 		display: block;
 		margin: 0 5px 5px 0;
 	}
+/* Bitmaps */
+	svg.bitmaps-grid {
+		display: block;
+		width: 50%;
+		margin: 0.5em;
+	}
 /* Bloxx */
 	svg.bloxx {
 		display: block;
